tests/toy/neg/000763_mutation.toylang
program a = { a = 0 sleep; } .
